--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "fa-svelte": "^3.0.0",
     "rollup-plugin-css-only": "^1.0.0",
