--- a/package.json
+++ b/package.json
@@ -2,27 +2,27 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
-    "concurrently": "^4.1.2",
-    "json-server": "^0.15.0",
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "concurrently": "^5.1.0",
+    "fa-svelte": "^3.1.0",
+    "json-server": "^0.16.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
-    "rollup": "^1.20.1",
-    "rollup-plugin-commonjs": "^10.0.2",
-    "rollup-plugin-livereload": "^1.0.1",
+    "prettier": "^1.19.1",
+    "rollup": "^2.0.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-css-only": "^2.0.0",
+    "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.1.0",
-    "rollup-plugin-terser": "^5.1.1",
-    "svelte": "^3.9.1"
+    "rollup-plugin-svelte": "^5.1.1",
+    "rollup-plugin-terser": "^5.2.0",
+    "svelte": "^3.19.2",
+    "svelte-routing": "^1.4.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.10.2",
-    "@fortawesome/free-solid-svg-icons": "^5.10.2",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "fa-svelte": "^3.0.0",
-    "rollup-plugin-css-only": "^1.0.0",
-    "sirv-cli": "^0.4.4",
-    "svelte-routing": "^1.3.0"
+    "sirv-cli": "^0.4.5"
   },
   "scripts": {
     "build": "rollup -c",
