--- a/package.json
+++ b/package.json
@@ -1,29 +1,6 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
-  "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "concurrently": "^5.1.0",
-    "fa-svelte": "^3.1.0",
-    "json-server": "^0.16.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "rollup": "^2.0.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-css-only": "^2.0.0",
-    "rollup-plugin-livereload": "^1.0.4",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.2.0",
-    "svelte": "^3.19.2",
-    "svelte-routing": "^1.4.2"
-  },
-  "dependencies": {
-    "sirv-cli": "^0.4.5"
-  },
   "scripts": {
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
@@ -31,6 +8,52 @@
     "start": "sirv public --single",
     "start:dev": "sirv public --single --dev",
     "backend": "json-server --watch db.json --delay=750",
-    "serve": "concurrently \"npm run backend\" \"npm run dev\""
+    "serve": "concurrently \"npm run backend\" \"npm run dev\"",
+    "test": "npx cypress open",
+    "test:open": "npx cypress open --browser edge",
+    "test:cypress-headed": "npx cypress --headed",
+    "tsc:check": "npm run tsc:src && npm run tsc:cypress",
+    "tsc:src": "tsc --noEmit --project tsconfig.json",
+    "tsc:cypress": "tsc --noEmit --project cypress/tsconfig.json",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "dependencies": {
+    "sirv-cli": "^1.0.11"
+  },
+  "devDependencies": {
+    "@bahmutov/cy-api": "^1.5.0",
+    "@cypress/code-coverage": "^3.9.2",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@rollup/plugin-typescript": "^8.2.0",
+    "@testing-library/cypress": "^7.0.4",
+    "@testing-library/svelte": "^3.0.3",
+    "@tsconfig/svelte": "^1.0.10",
+    "@types/uuid": "^8.3.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "concurrently": "^6.0.0",
+    "cypress": "^6.8.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-testing-library": "^3.10.2",
+    "fa-svelte": "^3.1.0",
+    "istanbul-lib-coverage": "^3.0.0",
+    "json-server": "^0.16.3",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
+    "prettier": "^2.2.1",
+    "rollup": "^2.42.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.35.0",
+    "svelte-check": "^1.2.6",
+    "svelte-preprocess": "^4.6.9",
+    "svelte-routing": "^1.5.0",
+    "typescript": "^4.2.3",
+    "uuid": "^8.3.2"
   }
 }
